# humming

./: .gitignore  pyproject.toml
.github/workflows/: build-wheel.yml
benchmarks/: bench_humming.py  bench_torch.py
humming/: __init__.py  layer.py
humming/config/: config.py  enum.py  mma.py
humming/csrc/launcher/: elf.h  launcher.cpp  tensor.h  tma.h  torch_api.h  utils.h
humming/include/humming/: scheduler.cuh
humming/include/humming/arith/: epilogue_arith.cuh  exp_offset.cuh  mainloop_arith.cuh
humming/include/humming/datatype/: dequant.cuh  dequant_fused.cuh
humming/include/humming/epilogue/: gmem_writer.cuh  pipeline.cuh  smem_writer.cuh
humming/include/humming/kernel/: hadamard.cuh  hadamard_quant.cuh  hadamard_quant_wide.cuh  humming.cuh  humming_ws.cuh  process.cuh  process_mxfp4.cuh  quant_weight.cuh  tops_bench.cuh
humming/include/humming/memory/: g2s_pipeline.cuh  producer_dequant.cuh  s2r_pipeline.cuh
humming/jit/: compiler.py  runtime.py  utils.py
humming/kernel/: dequant_weight.py  hadamard.py  hadamard_quant.py  hadamard_quant_wide.py  humming.py  pack_weight.py  process_mxfp4.py  quant_weight.py  repack_weight.py  tops_bench.py  unpack_weight.py
humming/ops/: __init__.py  hadamard.py  input.py  utils.py  weight.py
humming/schema/: compressed_tensors.py  humming.py
humming/tune/: __init__.py  base.py  sm120.py  sm90.py  sm90_h20.py
humming/utils/: cuda.py  device.py  jit.py  nvrtc.py  smem.py  test.py  weight.py
tests/: test_hadamard.py  test_hadamard_quant.py  test_m_major_scale.py  test_mxmma.py  test_scale.py
(+13 files in other folders)
